--- a/Toeic_app.css
+++ b/Toeic_app.css
@@ -2,4 +2,4 @@
 h1 { color: red;}
 body {background: black;}
 tr td { color: lightseagreen; }
-h1>strong>em {color : green;}
+#UIRange {color : green;}
