--- a/Toeic_app.css
+++ b/Toeic_app.css
@@ -2,4 +2,9 @@
 h1 { color: red;}
 body {background: black;}
 tr td { color: lightseagreen; }
+
+
 #UIRange {color : green;}
+#MainPart{margin-left: auto;margin-right: auto; width: 600px;}
+#div_btn{border: dotted 12px blue;}
+.btn_class{padding: 10px;margin: 5px}
